Change to Index from gallery

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="pages/index.css" />
-		<meta name="description" content="Cameo Grid Setup" />
+		<link rel="stylesheet" href="index.css" />
+		<meta name="description" contameo Grid Setup" />
 		<meta name="keywords" content="HTML and CSS" />
 		<meta name="author" content="Desiree Bradish" />
 		<title>Around The USA</title>
