Update Grid with Images

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="index.css" />
-		<meta name="description" contameo Grid Setup" />
+		<link rel="stylesheet" href="gallery.css" />
+		<meta name="description" content="gallery setup for Cameo Anderson" />
 		<meta name="keywords" content="HTML and CSS" />
 		<meta name="author" content="Desiree Bradish" />
 		<title>Around The USA</title>
@@ -13,18 +13,18 @@
 	<body class="body">
 		<div class="page">
 			<ul class="photoArray">
-				<li class="gridItemOne blue gridShape">One</li>
-				<li class="gridItemTwo yellow gridShape">Two</li>
-				<li class="gridItemThree red gridShape">Three</li>
-				<li class="gridItemFour red gridShape">Four</li>
-				<li class="gridItemFive green gridShape">Five</li>
-				<li class="gridItemSix blue gridShape">Six</li>
-				<li class="gridItemSeven yellow gridShape">Seven</li>
-				<li class="gridItemEight blue gridShape">Eight</li>
-				<li class="gridItemNine red gridShape">Nine</li>
-				<li class="gridItemTen yellow gridShape">Ten</li>
-				<li class="gridItemEleven green gridShape">Eleven</li>
-				<li class="gridItemTwelve blue gridShape">Twelve</li>
+				<li class="gridItemOne gridShape"></li>
+				<li class="gridItemTwo gridShape"></li>
+				<li class="gridItemThree gridShape"></li>
+				<li class="gridItemFour gridShape"></li>
+				<li class="gridItemFive green gridShape"></li>
+				<li class="gridItemSix blue gridShape"></li>
+				<li class="gridItemSeven yellow gridShape"></li>
+				<li class="gridItemEight blue gridShape"></li>
+				<li class="gridItemNine red gridShape"></li>
+				<li class="gridItemTen yellow gridShape"></li>
+				<li class="gridItemEleven green gridShape"></li>
+				<li class="gridItemTwelve blue gridShape"></li>
 			</ul>
 		</div>
 	</body>
